Adding new test

--- a/libliteinst/tests/Makefile
+++ b/libliteinst/tests/Makefile
@@ -37,6 +37,7 @@ liteinst:
 
 resources:
 	(cd resources; $(CXX+) $(CFLAGS) -O0 test_app_0.cpp -o test_app_0_O0.exe -L.. -ltests) #-L.. -ltests)
+	(cd resources; $(CXX+) $(CFLAGS) -O0 test_app_1.cpp -o test_app_1_O0.exe -L.. -ltests) #-L.. -ltests)
 	# $(CXX+) $(CFLAGS) -O3 $(RESOURCES)/test_app_0.cpp -o $(RESOURCES)/test_app_0_O3.exe # -L$(BUILD)/ -lliteinst
 
 build: $(OBJ) liteinst 
@@ -44,7 +45,8 @@ build: $(OBJ) liteinst
 
 test: build resources
 	# LD_PRELOAD=`pwd`/libtests.so ./$(RESOURCES)/test_app_0_O0.exe
-	LD_LIBRARY_PATH=`pwd`/ ./$(RESOURCES)/test_app_0_O0.exe
+	# LD_LIBRARY_PATH=`pwd`/ ./$(RESOURCES)/test_app_0_O0.exe
+	LD_LIBRARY_PATH=`pwd`/ ./$(RESOURCES)/test_app_1_O0.exe
 
 .cpp.o:
 	$(CXX+) $(CFLAGS) $(ARGS) -fPIC -c -Wall -o $@ $<
