tweak makefile sandbox

--- a/sandbox/relocate/Makefile
+++ b/sandbox/relocate/Makefile
@@ -5,9 +5,13 @@ DEPS_ROOT= $(ROOT)/deps
 TARG = relocate_tests.exe
 EXTRA_WARNS= -pedantic 
 
-CFLAGS = --std=c++11 -g -Wall $(EXTRA_WARNS) -I$(ROOT)/include 
+CFLAGS = --std=c++11 -g -Wall $(EXTRA_WARNS) -I$(ROOT)/include -I$(ROOT)/libliteinst/src/liteprobes 
 
 all: $(TARG)
 
 %.exe : %.cpp
 	g++ $(CFLAGS) $< $(INSTALL)/libliteinst.a $(DEPS_ROOT)/distorm/distorm3.a -o $@ 
+
+
+clean: 
+	rm *.exe 
