Ported toggle throughput microbench. Works now.

--- a/libliteinst/microbenchmarks/toggle_throughput/Makefile
+++ b/libliteinst/microbenchmarks/toggle_throughput/Makefile
@@ -1,26 +1,26 @@
 .PHONY: clean all
 
-NUM_THREADS=4
-NUM_ITERATIONS=10000000
+NUM_THREADS=16
+FREQ=1000000
+NUM_ITERATIONS=1000000
+DURATION=10
 
-RUN_ARGS ?= $(NUM_THREADS) $(NUM_ITERATIONS)
+RUN_ARGS = $(NUM_THREADS) $(DURATION) $(FREQ)
 
 ROOT=../../..
-CFLAGS = -finstrument-functions -fno-inline -fno-optimize-sibling-calls
+CFLAGS = #-finstrument-functions -fno-inline -fno-optimize-sibling-calls
 
-LIBS = -L$(ROOT)/build/lib -lfastinst -lrt -ldl -lpthread
+LIBS = -L$(ROOT)/build/lib -lliteinst -lrt -pthread
 
 CXX=g++
 
 all: toggle_throughput.exe
 
 toggle_throughput.exe:
-	$(CXX) --std=c++11 -g -c $(CFLAGS) func.cpp -o func.o
-	$(CXX) $(COMPILE_ARGS) --std=c++11 -g -c -I$(ROOT)/include -I$(ROOT)/common/include -I. toggle_throughput.cpp -o toggle_throughput.o
-	$(CXX) $(COMPILE_ARGS) --std=c++11 -g toggle_throughput.o func.o -o toggle_throughput.exe  $(LIBS)
+	$(CXX) $(COMPILE_ARGS) --std=c++11 -g -c -I$(ROOT)/include -I$(ROOT)/utils/include -I. liteprobes_toggle_throughput.cpp -o toggle_throughput.o
+	$(CXX) $(COMPILE_ARGS) --std=c++11 -g toggle_throughput.o -o toggle_throughput.exe  $(LIBS)
 
 run: toggle_throughput.exe
-	(readelf -s toggle_throughput.exe |grep FUNC | awk -F '[[:space:]]+' '{print $$3 "," $$9}' > functions.txt)
 	LD_LIBRARY_PATH=$(ROOT)/build/lib:$(LD_LIBRARY_PATH) ./toggle_throughput.exe $(RUN_ARGS)
 
 clean:
