--- a/libliteinst/microbenchmarks/toggle_throughput/Makefile
+++ b/libliteinst/microbenchmarks/toggle_throughput/Makefile
@@ -2,7 +2,10 @@
 
 NUM_THREADS=16
 FREQ=1000000
-NUM_ITERATIONS=1000000
+
+#NUM_ITERATIONS was unused! 
+# NUM_ITERATIONS=1000000
+
 DURATION=10
 
 RUN_ARGS = $(NUM_THREADS) $(DURATION) $(FREQ)
