--- a/libliteinst/microbenchmarks/injection_costs/dyninst/Makefile
+++ b/libliteinst/microbenchmarks/injection_costs/dyninst/Makefile
@@ -5,38 +5,36 @@ all: mutator mutatee
 DYNINST_ROOT=/u/budkahaw/Builds/Installations/dyninst-9.2.0
 # DYNINST_ROOT=/u/budkahaw/installations/dyninst
 
+NUM_FUNCS=1024
+NUM_RUNNERS=64
 ROOT=../../../..
+CODEGEN=../codegen
 
-LIBS = -L$(ROOT)/build/lib -lliteinst -lrt -ldl -pthread
+LIBS = -lrt -ldl -lpthread
 LDPATH = -L$(DYNINST_ROOT)/lib/ -ldyninstAPI -lcommon -linstructionAPI -lstackwalk -lpcontrol -lpatchAPI -lparseAPI -lsymtabAPI -ldynDwarf -ldynElf -ldwarf
 
-mutator: mutator.o
-	g++ mutator.o -I$(DYNINST_ROOT)/include/ $(LDPATH) -o mutator
-mutatee: mutatee.o
-	gcc mutatee.o -std=gnu99 -g -o mutatee -lrt
-mutatee.o: mutatee.c
-	gcc mutatee.c -std=gnu99 -g -c -o mutatee.o
+codegen:
+	$(CXX) -std=c++11 -g -c $(CODEGEN)/funcs.cpp -o funcs.o 
 
-mutator_time: mutator_time.o
-	g++ mutator_time.o -I$(DYNINST_ROOT)/include/ $(LDPATH) -o mutator_time
-mutatee_time: mutatee_time.o
-	gcc mutatee_time.o -std=gnu99 -g -o mutatee_time -lrt
-mutatee_time.o: mutatee_time.c
-	gcc mutatee_time.c -std=gnu99 -g -c -o mutatee_time.o
+mutator:  
+	g++ -std=c++11 -g mutator.cpp -I$(ROOT)/utils/include -I$(CODEGEN) -I$(DYNINST_ROOT)/include/ -o mutator $(LDPATH) $(LIBS)
+mutatee: codegen
+	g++ -std=c++11 -g -c -I$(CODEGEN) mutatee.c -o mutatee.o
+	g++ -std=c++11 -g mutatee.o funcs.o -g -o mutatee -pthread 
 
+build:
+	(cd $(CODEGEN); ./make_source.sh $(NUM_FUNCS))
+	make mutator 
+	make mutatee
 
-run_time: mutatee_time mutator_time
-	export LD_LIBRARY_PATH="$(DYNINST_ROOT)/lib/":${LD_LIBRARY_PATH}; \
-		export DYNINSTAPI_RT_LIB="$(DYNINST_ROOT)/lib/libdyninstAPI_RT.so"; \
-			./mutator_time "mutatee_time"
-
-run : mutator mutatee
-	export LD_LIBRARY_PATH="$(DYNINST_ROOT)/lib/":${LD_LIBRARY_PATH}; \
-		export DYNINSTAPI_RT_LIB="$(DYNINST_ROOT)/lib/libdyninstAPI_RT.so"; \
-			./mutator "mutatee"
-
-.cpp.o:
-	g++ -I$(DYNINST_ROOT)/include/ -I$(ROOT)/utils/include -g -c -Wall -o $@ $<
+run:
+	./mutatee $(NUM_RUNNERS) & 
+	export LD_LIBRARY_PATH=$(DYNINST_ROOT)/lib/:${LD_LIBRARY_PATH}; \
+	  	export DYNINSTAPI_RT_LIB="$(DYNINST_ROOT)/lib/libdyninstAPI_RT.so"; \
+				pgrep mutatee > pid; \
+	  		./mutator "pid" $(NUM_FUNCS)
+	pgrep mutatee | xargs -I {} kill -9 {}
 
 clean:
+	pgrep mutatee | xargs -I {} kill -9 {}
 	rm -f mutatee mutator mutator_time mutatee_time *.o
