--- a/libliteinst/microbenchmarks/injection_costs/liteinst/Makefile
+++ b/libliteinst/microbenchmarks/injection_costs/liteinst/Makefile
@@ -1,8 +1,10 @@
 .PHONY: clean all
 
-NUM_FUNCS=120
-ROOT=../../..
-CFLAGS = -g
+NUM_FUNCS=1024
+NUM_RUNNERS=8
+ROOT=../../../..
+CODEGEN=../codegen
+CFLAGS = -g 
 
 LIBS = -L$(ROOT)/build/lib -lliteinst -lrt -ldl -pthread
 
@@ -11,16 +13,22 @@ CXX=g++
 all: injection_costs.exe 
 
 injection_costs.exe: 
-	./make_source.sh $(NUM_FUNCS)
-	$(CXX) --std=c++11 -g -c funcs.cpp -o funcs.o 
-	$(CXX) --std=c++11 -g -c -I$(ROOT)/include -I$(ROOT)/utils/include -I. injection_costs_non_contended.cpp -o injection_costs_non_contended.o 
-	$(CXX) --std=c++11 -g -c -I$(ROOT)/include -I$(ROOT)/utils/include -I. injection_costs_contended.cpp -o injection_costs_contended.o 
-	$(CXX) --std=c++11 -g injection_costs_contended.o funcs.o -o injection_costs_contended.exe  $(LIBS)
-	$(CXX) --std=c++11 -g injection_costs_non_contended.o funcs.o -o injection_costs_non_contended.exe  $(LIBS)
+	(cd $(CODEGEN);./make_source.sh $(NUM_FUNCS))
+	$(CXX) --std=c++11 -g -c $(CODEGEN)/funcs.cpp -o funcs.o 
+	# $(CXX) --std=c++11 -g -c -I$(CODEGEN) -I$(ROOT)/include -I$(ROOT)/utils/include -I. injection_costs_non_contended.cpp -o injection_costs_non_contended.o 
+	# $(CXX) --std=c++11 -g -c -I$(CODEGEN) -I$(ROOT)/include -I$(ROOT)/utils/include -I. injection_costs_contended.cpp -o injection_costs_contended.o 
+	$(CXX) --std=c++11 -g -c -I$(CODEGEN) -I$(ROOT)/include -I$(ROOT)/utils/include -I. injection_costs_threaded.cpp -o injection_costs_threaded.o 
+	$(CXX) --std=c++11 -g injection_costs_threaded.o funcs.o -o injection_costs_threaded.exe  $(LIBS)
+	# $(CXX) --std=c++11 -g injection_costs_contended.o funcs.o -o injection_costs_contended.exe  $(LIBS)
+	# $(CXX) --std=c++11 -g injection_costs_non_contended.o funcs.o -o injection_costs_non_contended.exe  $(LIBS)
 
-run: injection_costs.exe
-	make run-non-contended
-	make run-contended
+build: injection_costs.exe
+
+run: 
+	make run-threaded
+
+run-threaded: 
+	LD_LIBRARY_PATH=$(ROOT)/build/lib:$(LD_LIBRARY_PATH) ./injection_costs_threaded.exe $(NUM_RUNNERS) $(NUM_FUNCS) 
 
 run-non-contended: injection_costs.exe
 	LD_LIBRARY_PATH=$(ROOT)/build/lib:$(LD_LIBRARY_PATH) ./injection_costs_non_contended.exe $(NUM_FUNCS)
@@ -30,5 +38,5 @@ run-contended: injection_costs.exe
 
 
 clean:
-	./make_source.sh --clean
-	rm -f *.o *.exe *.out *.audit *.txt
+	(cd $(CODEGEN); ./make_source.sh --clean)
+	rm -f *.o *.exe *.out *.audit *.txt 
