Adding stress test for sampling profiler

--- a/libliteprof/tests/Makefile
+++ b/libliteprof/tests/Makefile
@@ -36,6 +36,7 @@ liteprof:
 apps:
 	(cd $(APPS); $(CC+) $(CCFLAGS) -O0 test_app_0.cpp -o test_app_0_O0.exe) # -L../$(BUILD) -lliteprof)
 	(cd $(APPS); $(CC+) $(CCFLAGS) -O3 test_app_1.cpp -o test_app_1_O3.exe) # -L../$(BUILD) -lliteprof)
+	(cd $(APPS); $(CC+) $(CCFLAGS) -O0 stress.cpp -o stress.exe) # -L../$(BUILD) -lliteprof)
 
 build: $(OBJ) liteprof apps 
 
