--- a/microbenchmarks/dyninst/basic/Makefile
+++ b/microbenchmarks/dyninst/basic/Makefile
@@ -1,19 +1,22 @@
 all: mutator mutatee
 
+.PHONY: mutator mutator_time
+
 # This is the default install location based on DynInst's own build
 # config:
-DYNINST_ROOT=/usr/local
+DYNINST_ROOT=/u/budkahaw/Builds/Installations/dyninst-9.2.0
 # DYNINST_ROOT=/u/budkahaw/installations/dyninst
+LDPATH = -L$(DYNINST_ROOT)/lib/ -ldyninstAPI -lcommon -linstructionAPI -lstackwalk -lpcontrol -lpatchAPI -lparseAPI -lsymtabAPI -ldynDwarf -ldynElf -ldwarf
 
-mutator: mutator.o
-	g++ mutator.o -B$(DYNINST_ROOT)/include/ -L$(DYNINST_ROOT)/lib/ -ldyninstAPI -o mutator
+mutator: 
+	g++ mutator.cpp -I$(DYNINST_ROOT)/include/ -L$(DYNINST_ROOT)/lib/ -ldyninstAPI -o mutator $(LDPATH)
 mutatee: mutatee.o
 	gcc mutatee.o -std=gnu99 -g -o mutatee -lrt
 mutatee.o: mutatee.c
 	gcc mutatee.c -std=gnu99 -g -c -o mutatee.o
 
-mutator_time: mutator_time.o
-	g++ mutator_time.o -B$(DYNINST_ROOT)/include/ -L$(DYNINST_ROOT)/lib/ -ldyninstAPI -o mutator_time
+mutator_time: 
+	g++ mutator_time.cpp -I$(DYNINST_ROOT)/include/ -L$(DYNINST_ROOT)/lib/ -ldyninstAPI -o mutator_time $(LDPATH)
 mutatee_time: mutatee_time.o
 	gcc mutatee_time.o -std=gnu99 -g -o mutatee_time -lrt
 mutatee_time.o: mutatee_time.c
